* add $.zui.fixBodyScrollbar helper method and refactor modal.

--- a/src/less/basic/scaffolding.less
+++ b/src/less/basic/scaffolding.less
@@ -140,3 +140,15 @@ textarea { resize: vertical; }
 
 ol,
 ul { padding-left: 20px; }
+
+
+// Measure scrollbar width for padding body during modal show/hide
+// see https://davidwalsh.name/detect-scrollbar-width
+
+.scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
+}
