--- a/src/less/modules/modals.less
+++ b/src/less/modules/modals.less
@@ -184,17 +184,6 @@
 }
 
 
-// Measure scrollbar width for padding body during modal show/hide
-
-.modal-scrollbar-measure {
-  position: absolute;
-  top: -9999px;
-  width: 50px;
-  height: 50px;
-  overflow: scroll;
-}
-
-
 // Scale up the modal
 
 @media (min-width: @screen-sm-min) {
